--- a/tools/sidekick/_locales/en/messages.json
+++ b/tools/sidekick/_locales/en/messages.json
@@ -296,6 +296,14 @@
   "config_toggle_menu": {
     "message": "Show/hide menu"
   },
+  "config_filter": {
+    "message": "Search ...",
+    "description": "Filter projects"
+  },
+  "config_filter_clear": {
+    "message": "Reset",
+    "description": "Reset project filter"
+  },
   "config_projects": {
     "message": "Projects"
   },
