chore(sidekick): branch release [skip ci]

--- a/tools/sidekick/_locales/en/messages.json
+++ b/tools/sidekick/_locales/en/messages.json
@@ -365,8 +365,14 @@
   "config_manual_host_placeholder": {
     "message": "Production Hostname (optional)"
   },
+  "config_manual_liveHost_placeholder": {
+    "message": "Live Hostname (optional)"
+  },
   "config_manual_mountpoints_placeholder": {
     "message": "Content URL: https://..."
+  },
+  "config_manual_previewHost_placeholder": {
+    "message": "Preview Hostname (optional)"
   },
   "config_manual_project_placeholder": {
     "message": "Project Name (optional)"
